--- a/src/org/sil/syllableparser/view/fxml/MoraicTemplates.fxml
+++ b/src/org/sil/syllableparser/view/fxml/MoraicTemplates.fxml
@@ -58,6 +58,7 @@
                       <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" />
                     </rowConstraints>
@@ -72,8 +73,9 @@
                         <ComboBox fx:id="typeComboBox" prefHeight="2.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="2" promptText="Choose type" />
                         <TextField fx:id="representationField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="3" GridPane.vgrow="SOMETIMES" />
                         <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label fx:id="slotsErrorMessage" text="" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <ComboBox fx:id="sncChoicesComboBox" prefHeight="25.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="5" promptText="Choose class" />
+                        <Label fx:id="typeWarningMessage" text="" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label fx:id="slotsErrorMessage" text="" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <ComboBox fx:id="sncChoicesComboBox" prefHeight="25.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="6" promptText="Choose class" />
                      </children>
                   </GridPane>
                </children>
