--- a/src/org/sil/syllableparser/view/fxml/NPRules.fxml
+++ b/src/org/sil/syllableparser/view/fxml/NPRules.fxml
@@ -7,6 +7,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -27,7 +28,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="shSonorityHierarchyTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="npRulesTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
 <!--                       <TableColumn fx:id="checkBoxColumn" prefWidth="4.0"> -->
 <!--                         <graphic> -->
@@ -35,8 +36,12 @@
 <!--                         </graphic> -->
 <!--                       </TableColumn>  -->
                       <TableColumn fx:id="nameColumn" prefWidth="63.0" text="%label.name" />
-                      <TableColumn fx:id="naturalClassColumn" prefWidth="119.0" text="%label.segments" />
-                        <TableColumn fx:id="descriptionColumn" prefWidth="73.0" text="%label.description" />
+                      <TableColumn fx:id="descriptionColumn" prefWidth="73.0" text="%label.description" />
+                      <TableColumn fx:id="affectedSegmentOrNaturalClassColumn" prefWidth="119.0" text="%label.nprule.affectedsegmentornaturalclass" />
+                      <TableColumn fx:id="contextColumn" prefWidth="119.0" text="%label.nprule.context" />
+                      <TableColumn fx:id="actionColumn" prefWidth="119.0" text="%label.nprule.action" />
+                      <TableColumn fx:id="levelColumn" prefWidth="119.0" text="%label.nprule.level" />
+                      <TableColumn fx:id="obeysSSPColumn" prefWidth="119.0" text="%label.nprule.obeysssp" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -60,35 +65,52 @@
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label text="%label.name" GridPane.hgrow="SOMETIMES" />
                         <Label text="%label.description" GridPane.rowIndex="1" />
-                        <Label text="%label.segments" GridPane.rowIndex="2" />
-                        <Label text="%label.active" GridPane.rowIndex="3" />
-                        <TextField fx:id="nameField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" />
-                        <TextField fx:id="descriptionField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
-<!--                         <TextField fx:id="segmentOrNaturalClassField" GridPane.columnIndex="1" GridPane.rowIndex="2" /> -->
+                        <Label text="%label.nprule.affectedsegmentornaturalclass" GridPane.rowIndex="2" />
+                        <Label text="%label.nprule.context" GridPane.rowIndex="3" />
+                        <Label text="%label.nprule.action" GridPane.rowIndex="4" />
+                        <Label text="%label.nprule.level" GridPane.rowIndex="5" />
+                        <Label text="%label.nprule.obeysssp" GridPane.rowIndex="6" />
+                        <Label text="%label.active" GridPane.rowIndex="7" />
+                        <TextField fx:id="nameField" GridPane.columnIndex="1" />
+                        <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
                         <FlowPane hgap="4.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                            <children>
-                              <TextFlow fx:id="ncsTextFlow" prefWidth="234.0">
-                                 <padding>
-                                    <Insets top="7.5" />
-                                 </padding></TextFlow>
-                              <Button fx:id="ncsButton" mnemonicParsing="false" onAction="#handleLaunchSegmentChooser" text="...">
+                              <TextField fx:id="affectedTextFlow" prefWidth="234.0" editable="false"/>
+                              <Button fx:id="affectedButton" mnemonicParsing="false" onAction="#handleLaunchAffectedSegOrNCChooser" text="...">
                                  <FlowPane.margin>
                                     <Insets left="3.0" />
                                  </FlowPane.margin>
                               </Button>
                            </children>
                          </FlowPane>
-                         <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <FlowPane hgap="4.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
+                           <children>
+                              <TextField fx:id="contextTextFlow" prefWidth="234.0" editable="false"/>
+                              <Button fx:id="contextButton" mnemonicParsing="false" onAction="#handleLaunchContextSegOrNCChooser" text="...">
+                                 <FlowPane.margin>
+                                    <Insets left="3.0" />
+                                 </FlowPane.margin>
+                              </Button>
+                           </children>
+                         </FlowPane>
+                         <ComboBox fx:id="actionComboBox" prefHeight="2.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                         <ComboBox fx:id="levelComboBox" prefHeight="2.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                         <CheckBox fx:id="obeysSSPCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                         <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                      </children>
                   </GridPane>
-                  <TextArea fx:id="errorTextArea" layoutX="52.0" layoutY="174.0" prefHeight="200.0" prefWidth="-1.0" />
+                  <TextArea fx:id="ruleTextArea" layoutX="52.0" layoutY="374.0" prefHeight="200.0" prefWidth="-1.0" />
                </children>
             </AnchorPane>
         </items>
