--- a/src/org/sil/syllableparser/view/fxml/NPRules.fxml
+++ b/src/org/sil/syllableparser/view/fxml/NPRules.fxml
@@ -19,6 +19,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.web.WebView?>
 
 <StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.NPRulesController">
    <children>
@@ -28,11 +29,6 @@
                <children>
                   <TableView fx:id="npRulesTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-<!--                       <TableColumn fx:id="checkBoxColumn" prefWidth="4.0"> -->
-<!--                         <graphic> -->
-<!--                           <CheckBox fx:id="checkBoxColumnHead" mnemonicParsing="false" onAction="#handleCheckBoxColumnHead" prefHeight="17.0" prefWidth="4.0" selected="true" /> -->
-<!--                         </graphic> -->
-<!--                       </TableColumn>  -->
                       <TableColumn fx:id="nameColumn" prefWidth="63.0" text="%label.name" />
                       <TableColumn fx:id="descriptionColumn" prefWidth="73.0" text="%label.description" />
                       <TableColumn fx:id="affectedSegmentOrNaturalClassColumn" prefWidth="119.0" text="%label.nprule.affectedsegmentornaturalclass" />
@@ -41,9 +37,6 @@
                       <TableColumn fx:id="levelColumn" prefWidth="119.0" text="%label.nprule.level" />
                       <TableColumn fx:id="obeysSSPColumn" prefWidth="119.0" text="%label.nprule.obeysssp" />
                     </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
                   </TableView>
                </children>
             </AnchorPane>
@@ -53,13 +46,13 @@
                   <Button fx:id="buttonMoveUp" contentDisplay="GRAPHIC_ONLY" layoutX="1.0" layoutY="58.0" mnemonicParsing="false" onAction="#handleMoveUp" />
                </children>
             </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="383.0">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="598.0" prefWidth="383.0" AnchorPane.rightAnchor="5.0">
                <children>
                   <Label layoutX="1.0" layoutY="7.0" text="%label.nprules" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0" />
                   <GridPane layoutX="5.0" layoutY="35.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="35.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="70.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="276.0" minWidth="10.0" prefWidth="276.0" />
+                      <ColumnConstraints hgrow="ALWAYS" maxWidth="170.0" minWidth="10.0" prefWidth="70.0" />
+                      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="276.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -72,7 +65,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="25.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="%label.name" GridPane.hgrow="SOMETIMES" />
+                        <Label text="%label.name" />
                         <Label text="%label.description" GridPane.rowIndex="1" />
                         <Label text="%label.nprule.affectedsegmentornaturalclass" GridPane.rowIndex="2" />
                         <Label text="%label.nprule.context" GridPane.rowIndex="3" />
@@ -80,6 +73,7 @@
                         <Label text="%label.nprule.level" GridPane.rowIndex="5" />
                         <Label text="%label.nprule.obeysssp" GridPane.rowIndex="6" />
                         <Label text="%label.active" GridPane.rowIndex="7" />
+                        <Label text="%label.ruletree" GridPane.rowIndex="8" fx:id="ruleTreeLabel" />
                         <TextField fx:id="nameField" GridPane.columnIndex="1" />
                         <TextField fx:id="descriptionField" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
                         <FlowPane hgap="4.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
@@ -106,6 +100,11 @@
                          <ComboBox fx:id="levelComboBox" prefHeight="2.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                          <CheckBox fx:id="obeysSSPCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                          <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+						<AnchorPane GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="8" GridPane.vgrow="ALWAYS">
+                           <children>
+                              <WebView fx:id="ruleLingTreeSVG" prefHeight="400.0" prefWidth="1000.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                           </children>
+                        </AnchorPane>
                      </children>
                   </GridPane>
                   <Label fx:id="invalidRuleMessage" layoutX="70.0" layoutY="225" prefHeight="180.0" prefWidth="400.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="20.0" />
