--- a/src/org/sil/syllableparser/view/fxml/NPFilters.fxml
+++ b/src/org/sil/syllableparser/view/fxml/NPFilters.fxml
@@ -68,23 +68,23 @@
                         <Label text="%label.name" GridPane.hgrow="SOMETIMES" />
                         <Label text="%label.description" GridPane.rowIndex="1" />
                         <Label text="%label.filtertype" GridPane.rowIndex="2" />
-                        <Label text="%label.filterrepresentation" GridPane.rowIndex="5" />
-                        <Label text="%label.action" GridPane.rowIndex="3" />
-                        <Label text="%label.active" GridPane.rowIndex="6" />
+                        <Label text="%label.filterrepresentation" GridPane.rowIndex="3" />
+                        <Label text="%label.action" GridPane.rowIndex="3" visible="false" />
+                        <Label text="%label.active" GridPane.rowIndex="4" />
                         <TextField fx:id="nameField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" />
                         <TextField fx:id="descriptionField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES" />
                         <ComboBox fx:id="typeComboBox" prefHeight="2.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="2" promptText="Choose type" />
-                        <TextField fx:id="representationField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="5" GridPane.vgrow="SOMETIMES" />
-						<RadioButton fx:id="repairRadioButton" mnemonicParsing="false" onAction="#handleRepairRadioButton" selected="true" GridPane.columnIndex="1" GridPane.rowIndex="3" text="%radio.repairaction">
+                        <TextField fx:id="representationField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="3" GridPane.vgrow="SOMETIMES" />
+						<RadioButton fx:id="repairRadioButton" mnemonicParsing="false" onAction="#handleRepairRadioButton" selected="true" GridPane.columnIndex="1" GridPane.rowIndex="3" text="%radio.repairaction" visible="false">
                				<toggleGroup>
                   				<ToggleGroup fx:id="group" />
                				</toggleGroup>
                			</RadioButton>
-						<RadioButton fx:id="failRadioButton" mnemonicParsing="false" onAction="#handleFailRadioButton" GridPane.columnIndex="1" GridPane.rowIndex="4" text="%radio.failaction" toggleGroup="$group"/>
-                        <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <Label fx:id="typeWarningMessage" text="" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                        <Label fx:id="slotsErrorMessage" text="" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-                        <ComboBox fx:id="sncChoicesComboBox" prefHeight="25.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="8" promptText="Choose class" />
+						<RadioButton fx:id="failRadioButton" mnemonicParsing="false" onAction="#handleFailRadioButton" GridPane.columnIndex="1" GridPane.rowIndex="4" text="%radio.failaction" toggleGroup="$group" visible="false"/>
+                        <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="typeWarningMessage" text="" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label fx:id="slotsErrorMessage" text="" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                        <ComboBox fx:id="sncChoicesComboBox" prefHeight="25.0" prefWidth="203.0" GridPane.columnIndex="1" GridPane.rowIndex="6" promptText="Choose class" />
                      </children>
                   </GridPane>
                </children>
