--- a/src/org/sil/syllableparser/view/fxml/OTConstraints.fxml
+++ b/src/org/sil/syllableparser/view/fxml/OTConstraints.fxml
@@ -4,23 +4,22 @@
     This software is licensed under the LGPL, version 2.1 or later 
     (http://www.gnu.org/licenses/lgpl-2.1.html) -->
 
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.web.*?>
-
+<?import javafx.scene.web.WebView?>
 
 <StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.OTConstraintsController">
    <children>
@@ -37,7 +36,7 @@
 <!--                       </TableColumn> -->
                       <TableColumn fx:id="nameColumn" prefWidth="76.0" text="%label.name" />
                       <TableColumn fx:id="descriptionColumn" prefWidth="94.0" text="%label.description" />
-                      <TableColumn fx:id="representationColumn" prefWidth="30.0" text="%label.otrepresentation" />
+<!--                       <TableColumn fx:id="representationColumn" prefWidth="30.0" text="%label.otrepresentation" />  -->
                      </columns>
                   </TableView>
                </children>
@@ -58,6 +57,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints />
                     </rowConstraints>
                      <children>
                         <Label text="%label.name" />
@@ -67,7 +67,7 @@
                         <Label text="%label.affectedelement2" GridPane.rowIndex="4" />
                         <Label text="%label.structuraloptions2" GridPane.rowIndex="5" />
                         <Label text="%label.active" GridPane.rowIndex="6" />
-                        <Label text="%label.otconstrainttree" GridPane.rowIndex="7" />
+                        <Label fx:id="constraintTreeLabel" text="%label.otconstrainttree" GridPane.rowIndex="7" GridPane.valignment="TOP" />
                         <TextField fx:id="nameField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" />
                         <TextField fx:id="descriptionField" onKeyReleased="#keyboardReleased" onMouseReleased="#toolBarMouseReleased" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <FlowPane hgap="4.0" prefWidth="200.0" vgap="8.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
@@ -113,7 +113,7 @@
                         <CheckBox fx:id="activeCheckBox" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                         <AnchorPane GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" GridPane.vgrow="ALWAYS">
                            <children>
-                              <WebView fx:id="constraintLingTreeSVG" prefHeight="400.0" prefWidth="1000.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                              <WebView fx:id="constraintLingTreeSVG" prefHeight="200.0" prefWidth="1000.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
                            </children>
                         </AnchorPane>
                      </children>
