--- a/src/org/sil/syllableparser/view/fxml/OTConstraintRankings.fxml
+++ b/src/org/sil/syllableparser/view/fxml/OTConstraintRankings.fxml
@@ -22,15 +22,15 @@
 
 <StackPane prefHeight="397.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.sil.syllableparser.view.OTConstraintRankingsController">
    <children>
-      <SplitPane fx:id="splitPane" dividerPositions="0.4373040752351097" prefHeight="160.0" prefWidth="200.0">
+      <SplitPane fx:id="splitPane" dividerPositions="0.4373040752351097, 0.5" prefHeight="160.0" prefWidth="200.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
                   <TableView fx:id="otRankingsTable" layoutX="-6.0" layoutY="91.0" prefHeight="598.0" prefWidth="255.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
-                      <TableColumn fx:id="nameColumn" prefWidth="63.0" text="%label.name" />
-                      <TableColumn fx:id="descriptionColumn" prefWidth="73.0" text="%label.description" />
-                      <TableColumn fx:id="rankingRepresentationColumn" prefWidth="119.0" text="%label.otconstraintranking" />
+                      <TableColumn fx:id="nameColumn" editable="false" prefWidth="63.0" sortable="false" text="%label.name" />
+                      <TableColumn fx:id="descriptionColumn" editable="false" prefWidth="73.0" sortable="false" text="%label.description" />
+                      <TableColumn fx:id="rankingRepresentationColumn" editable="false" prefWidth="119.0" sortable="false" text="%label.otconstraintranking" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -51,12 +51,13 @@
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="70.0" />
                       <ColumnConstraints hgrow="SOMETIMES" maxWidth="276.0" minWidth="10.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="276.0" minWidth="10.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label text="%label.name" GridPane.hgrow="SOMETIMES" />
@@ -70,7 +71,8 @@
                               <TextFlow fx:id="rankingTextFlow" prefWidth="234.0">
                                  <padding>
                                     <Insets top="7.5" />
-                                 </padding></TextFlow>
+                                 </padding>
+                              </TextFlow>
                               <Button fx:id="rankingRepresentationButton" mnemonicParsing="false" onAction="#handleLaunchRankingChooser" text="...">
                                  <FlowPane.margin>
                                     <Insets left="3.0" />
