--- a/src/org/sil/syllableparser/view/fxml/SyllabificationComparison.fxml
+++ b/src/org/sil/syllableparser/view/fxml/SyllabificationComparison.fxml
@@ -20,7 +20,7 @@
             <CheckBox fx:id="useONCApproach" layoutX="37.0" layoutY="72.0" mnemonicParsing="false" text="%label.useoncapproach" />
             <CheckBox fx:id="useMoraicApproach" layoutX="332.0" layoutY="13.0" mnemonicParsing="false" text="%label.usemoraicapproach" />
             <CheckBox fx:id="useNuclearProjectionApproach" layoutX="332.0" layoutY="42.0" mnemonicParsing="false" text="%label.usenpapproach" />
-            <CheckBox fx:id="useOTApproach" disable="true" layoutX="332.0" layoutY="72.0" mnemonicParsing="false" text="%label.useotapproach" />
+            <CheckBox fx:id="useOTApproach" layoutX="332.0" layoutY="72.0" mnemonicParsing="false" text="%label.useotapproach" />
          </children>
       </Pane>
 		<WebView fx:id="browser" layoutX="1.0" layoutY="120.0" prefHeight="435.0" prefWidth="637.0" AnchorPane.bottomAnchor="45.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="110.0"/>
