--- a/src/org/sil/syllableparser/view/fxml/RootLayout.fxml
+++ b/src/org/sil/syllableparser/view/fxml/RootLayout.fxml
@@ -239,12 +239,14 @@
 						<items>
 							<MenuItem mnemonicParsing="true" onAction="#handleUserDocumentation"
 								text="%menu.userdocumentation" />
+							<SeparatorMenuItem />
 							<MenuItem mnemonicParsing="true" onAction="#handleSuggestedSteps"
 								text="%menu.suggestedsteps" />
 							<MenuItem mnemonicParsing="true" onAction="#handleHelpIntro"
 								text="%menu.helpintro" />
 							<MenuItem mnemonicParsing="true" onAction="#handleHammond1997"
 								text="%menu.helphammond1997" />
+							<SeparatorMenuItem />
 							<MenuItem mnemonicParsing="true" onAction="#handleAbout"
 								text="%menu.about" />
 						</items>
